--- a/notebooks/mngast120k.ipynb
+++ b/notebooks/mngast120k.ipynb
@@ -251,126 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T00:17:25.461757Z",
-     "iopub.status.busy": "2025-04-05T00:17:25.461105Z",
-     "iopub.status.idle": "2025-04-05T00:19:39.576177Z",
-     "shell.execute_reply": "2025-04-05T00:19:39.575159Z",
-     "shell.execute_reply.started": "2025-04-05T00:17:25.461728Z"
-    },
-    "trusted": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3adaeb87455f4b86903def6df42d2091",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "README.md:   0%|          | 0.00/12.9k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b40a0d2517ac40c2a6430b746a2be252",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "code_search_net.py:   0%|          | 0.00/8.44k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e8e775e458d4d089e44d55c26b1a4f6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "python.zip:   0%|          | 0.00/941M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdfa2fd3e10c43c3969d48e1852ac691",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/412178 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8514f385518e4d2eb1825cc8dab62154",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/22176 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f592315652684416ac5532c0aa7a9bc6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/23107 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
-       "        num_rows: 60000\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
-       "        num_rows: 7000\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
-       "        num_rows: 3500\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Python loading\n",
     "python_dataset = DatasetDict({\n",
@@ -991,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-05T00:29:01.558761Z",
@@ -1013,7 +896,7 @@
     "        # Print decoded input (with masking, i.e., function body with <extra_id_0>)\n",
     "        input_ids = tokenized_dataset[\"train\"][idx][\"input_ids\"]\n",
     "        decoded_input = tokenizer.decode(input_ids, skip_special_tokens=False)\n",
-    "        print(\"▶️ Masked Input Code:\\n\", decoded_input)\n",
+    "        print(\"Masked Input Code:\\n\", decoded_input)\n",
     "    \n",
     "        # Print decoded label (method name target)\n",
     "        label_ids = tokenized_dataset[\"train\"][idx][\"labels\"]\n",
@@ -1021,12 +904,12 @@
     "            [id for id in label_ids if id != tokenizer.pad_token_id],\n",
     "            skip_special_tokens=True\n",
     "        )\n",
-    "        print(\"🎯 Target Method Name:\", decoded_label)\n",
+    "        print(\"Target Method Name:\", decoded_label)\n",
     "    \n",
     "        # Optional: show original method name from combined dataset (if available)\n",
     "        if \"func_name\" in combined_dataset[\"train\"].features:\n",
     "            original_name = combined_dataset[\"train\"][idx][\"func_name\"]\n",
-    "            print(\"🧾 Original Method Name:\", original_name)"
+    "            print(\"Original Method Name:\", original_name)"
    ]
   },
   {
